--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -25,12 +25,12 @@ jobs:
     - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install # will run `yarn install` command
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: build # will run `yarn build` command
-      
+    
+    - name: Build the project
+      run: yarn build
+        
     - name: Install surge globally
-      run: npm install -g surge
+      run: npm install --global surge
       
     - name: Run Surge
       run: surge ./build zee-first-react-exercise.surge.sh --token ${{ secrets.SURGE_TOKEN }}
