--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -1,13 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: React App Deploy to Surge
+name: Deploy Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -21,22 +19,23 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
+
+    # Runs a single command using the runners shell
     - name: Install Node.js
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-
+    
     - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install # will run `yarn install` command
     
-    - name: Build the project
-      run: yarn build
-        
-    - name: Install surge globally
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: build # will run `yarn build` command
+      
+    - name: Install Surge
       run: yarn global add surge
       
     - name: Run Surge
-      run: surge ./build zee-first-react-exercise.surge.sh --token ${{ secrets.SURGE_TOKEN }}
-
+      run: surge ./build zee-first-react-exercise.surge.sh --token ${{secrets.SURGE_TOKEN}}
