--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           cmd: build # will run `yarn build` command
       - name: Install Surge
-        run: npm install -g surge
+        run: yarn global add surge
       - name: Run surge
         run: surge ./build zee-first-react-exercise.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
